# nix_cmake_example

./: README.md  flake.nix  integration_test.nix  nixpkgs-src.json  pinnedNixpkgs.nix  release.nix  spec.json
nix/: ci.nix  sources.json
python_client/: default.nix  derivation.nix  overlay.nix  setup.py
python_client/messagedb/: client.py  webserver.py
server/: CMakeLists.txt  default.nix  derivation.nix  overlay.nix
server/src/: CMakeLists.txt  db.cpp  db.hpp  server.cpp  trim.cpp  trim.hpp
server/test/: CMakeLists.txt  main.cpp
